# mos6502emu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh
.cache/clangd/index/: address_mode.cpp.B039ECB009AD8EF6.idx  address_mode.hpp.BF139BDE4B8D3194.idx  bit_width.hpp.0D96CF0C2BFC1138.idx  compiler.cpp.7D29CCFF8F32BE06.idx  compiler.hpp.2161355DD757B14C.idx  cpu.cpp.E790801086FE1CAE.idx  cpu.hpp.C8BD0692A11773D5.idx  instructions.cpp.D07F0AF93BD4C6C0.idx  instructions.hpp.D5E1E463B7158DAF.idx  json.hpp.9A257FEC7CB12A09.idx  lexer.cpp.4CAD327246037D36.idx  lexer.hpp.6034CAC16862542C.idx  main.cpp.EECA3FA907C996EB.idx  processor_status.cpp.0FB01DB535888CFB.idx  processor_status.hpp.B5DA9ACC2E0545C6.idx  program_counter.cpp.A0E63C0FE58B15A0.idx  program_counter.hpp.411C4A76801E1C7C.idx  ram.cpp.62B960C849AAAE1F.idx  ram.hpp.EE08D44A63486C05.idx  register.cpp.782BBA73A220568E.idx  register.hpp.413EEB6A9B3BEB2A.idx
include/: bit_width.hpp  cpu.hpp
include/archt/: processor_status.hpp  program_counter.hpp  ram.hpp  register.hpp
include/asmbl/: address_mode.hpp  instructions.hpp
include/compl/: compiler.hpp  lexer.hpp
include/ncurs/: ui.hpp
res/: opcodes.json
src/: cpu.cpp  main.cpp
src/archt/: CMakeLists.txt  processor_status.cpp  program_counter.cpp  ram.cpp  register.cpp
src/asmbl/: CMakeLists.txt  address_mode.cpp  instructions.cpp
src/compl/: CMakeLists.txt  compiler.cpp  lexer.cpp
src/ncurs/: CMakeLists.txt  ui.cpp
